add flyway , working with migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=eventotec-back-end
+
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost/eventostec}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:123}
+#aws.region=${AWS_REGION:us-east-1}
+#aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
+#server.port=80
