--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.application.name=eventotec-back-end
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost/eventostec}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:123}
+
+# Configurações do JPA (Java Persistence API)
+spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.baseline-on-migrate=true
 #aws.region=${AWS_REGION:us-east-1}
 #aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
 #server.port=80
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
