--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,10 @@ spring.datasource.password=${DB_PASSWORD:123}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.baseline-on-migrate=true
-#aws.region=${AWS_REGION:us-east-1}
-#aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
+
+aws.region=${AWS_REGION:us-east-1}
+aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
+
 #server.port=80
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
