--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.baseline-on-migrate=true
 
+#aws.accessKeyId=${AWS_ACESSKEYID:access-key-id}
+#aws.secretKey=${AWS.SECRETKEY:secret-key}
 aws.region=${AWS_REGION:us-east-1}
 aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
 
