eventotec almost 100% working, just perfecting it and correcting some details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.flyway.locations=classpath:db/migration
 # Configurações do AWS
 aws.region=${AWS_REGION:us-east-1}
 aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
+aws.S3AccessKey=
+aws.S3AccessSecretKey=
+server.port=80
+
